--- a/package.json
+++ b/package.json
@@ -19,5 +19,12 @@
   "homepage": "https://github.com/Spillenx/telgea-codetest#readme",
   "dependencies": {
     "express": "^5.1.0"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.3",
+    "@types/node": "^24.1.0",
+    "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
