--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"scripts": {
 		"dev": "nodemon --watch 'src/**/*.ts' --exec ts-node src/index.ts",
 		"build": "tsc",
-		"start": "node dist/index.js"
+		"start": "node dist/index.js",
+		"test": "vitest run"
 	},
 	"repository": {
 		"type": "git",
@@ -27,6 +28,8 @@
 		"@types/node": "^24.1.0",
 		"nodemon": "^3.1.10",
 		"ts-node": "^10.9.2",
-		"typescript": "^5.8.3"
+		"tsx": "^4.20.3",
+		"typescript": "^5.8.3",
+		"vitest": "^3.2.4"
 	}
 }
